@@ -1,3 +1,9 @@
+2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Fix
+	  duplicated ':' when completing incompletely parsed names
+	  for the path bar.
+
 2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* AssemblyInfo.cs:
